4620.	[port]		Handle EPFNOSUPPORT being returned when probing
			to see if a socket type is supported. [RT #45214]

4619.	[bug]		Call isc_mem_put instead of isc_mem_free in
			bin/named/server.c:setup_newzones. [RT #45202]

4618.	[bug]		Check isc_mem_strdup results in dns_view_setnewzones.
			Add logging for lmdb call failures. [RT #45204]

4617.	[test]		Update rndc system test to be more delay tolerant.
			[RT #45177]

4616.	[bug]		When using LMDB, zones deleted using "rndc delzone"
			were not correctly removed from the new-zone
			database. [RT #45185]

4615.	[bug]		AD could be set on truncated answer with no records
			present in the answer and authority sections.
			[RT #45140]

4614.	[test]		Fixed an error in the sockaddr unit test. [RT #45146]

4613.	[func]		By default, the maximum size of a zone journal file
			is now twice the size of the zone's contents (there
			is little benefit to a journal larger than this).
			This can be overridden by setting "max-journal-size"
			to "unlimited" or to an explicit value up to 2G.
			Thanks to Tony Finch. [RT #38324]

4612.	[bug]		Silence 'may be use uninitalised' warning and simplify
			the code in lwres/getaddinfo:process_answer.
			[RT #45158]

4611.	[bug]		The default LMDB mapsize was too low and caused
			errors after few thousand zones were added using
			rndc addzone. A new config option "lmdb-mapsize"
			has been introduced to configure the LMDB
			mapsize depending on operational needs.
			[RT #44954]

4610.	[func]		The "new-zones-directory" option specifies the
			location of NZF or NZD files for storing
			configuration of zones added by "rndc addzone".
			Thanks to Petr Menšík. [RT #44853]

4609.	[cleanup]	Rearrange makefiles to enable parallel execution
			(i.e. "make -j"). [RT #45078]

4608.	[func]		DiG now warns about .local queries which are reserved
			for Multicast DNS. [RT #44783]

4607.	[bug]		The memory context's malloced and maxmalloced counters